
        * Version 0.8.0 released
        ========================

        Major review of public interfaces of all classes
        Reorganize sky models
        Introduce GContainer interface class
        Add Virtual Observatory support
        Introduce GUrl classes for transparent URL handling
        Make use of GUrl class in XML I/O
        Optimize computations

2012-12-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.7.0 released
        ========================

        Add base module for interface classes
        Introduce GBase from which almost all classes derive
        Add dependency tracking for Python interface
        Add COMPTEL instrument interface
        Open FITS image using the equivalent data type
        Refactor CTA response classes
        Define new instrument response interface
        Add GSource class
        File locking failures do no longer throw exceptions
        Optimize GNodeArray computations and add unit tests
        Add handling of undefined and NaN values to GPar class
        Add GPhotons photon container class
        Implement mc(), flux() and eflux() for all spectral models
        Rework GTime interface and introduce GTimeReference class
        Add GModelSpectralLogParabola spectral model
 
2012-09-17  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Bug fix version 0.6.2 released
        ================================

        clang++ compiler precedence is only taken for Mac OS X >= 10.7
        Omit Python checks if Python bindings are disabled
        Enhance OpenMP configuration on Darwin
        Export MACOSX_DEPLOYMENT_TARGET only for --enable-universalsdk
        Improve Python bindings configuration
        Add TEST_ENV_DIR to load library path

2012-09-15  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Bug fix version 0.6.1 released
        ================================

        Do not require gammalib/__init__.py file to be present